--- a/Presentation/View/BoardMenu.xaml
+++ b/Presentation/View/BoardMenu.xaml
@@ -26,7 +26,7 @@
         </Grid.RowDefinitions>
         <Button Name="Logout" Content="Logout" Height="25" Width="60" FontSize="12" Click="Logout_Click"/>
         <Label Content="{Binding Path=Hello, Mode=OneWay}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="12"/>
-        <Label Content="KANBAN by AG" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="50" Grid.ColumnSpan="5" FontFamily="Freestyle Script" />
+        <Label Content="KANBAN by AEO" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="50" Grid.ColumnSpan="5" FontFamily="Freestyle Script" />
         <Label Content="Your Boards" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="25" Grid.ColumnSpan="2" Grid.Row="2"/>
         <Label Content="New Board" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="25" Grid.ColumnSpan="2" Grid.Row="2" Grid.Column="3"/>
         <ComboBox Name="BoardCB" ItemsSource="{Binding Path=BoardCB, Mode=OneWay}" HorizontalAlignment="Center" Width="140" Grid.Column="1" Grid.Row="3" VerticalAlignment="Center"/>
