--- a/Presentation/View/BoardView.xaml
+++ b/Presentation/View/BoardView.xaml
@@ -32,7 +32,7 @@
                 <Button Content="Filter" FontSize="22" Height="40" Width="140" Margin="0,0,0,30" Click="Filter_Click"/>
                 <TextBox Text="{Binding Path=Filter}" Height="30" Width="140" VerticalAlignment="Bottom" Margin="0,0,0,6"/>
                 <Button Content="Sort Tasks" FontSize="22" Grid.Row="1" Height="70" Width="140" Click="Sort_Click"/>
-                <Button Content="Asign Task" FontSize="22" Grid.Row="2" Height="70" Width="140" Click="Button_Click_NewColumn"/>
+                <Button Content="Asign Task" FontSize="22" Grid.Row="2" Height="70" Width="140" Click="Button_Click_assigntask"/>
 				<Button Content="Add Task" FontSize="22" Grid.Row="3" Height="70" Width="140" Click="Button_Click_NewTask"/>
 				<Button Content="Return" FontSize="18" Grid.Row="4" Height="40" Width="80" Click="Return_Click"/>
             </Grid>
