--- a/Presentation/View/BoardView.xaml
+++ b/Presentation/View/BoardView.xaml
@@ -56,6 +56,7 @@
                     <ComboBox Name="ColumnCB" ItemsSource="{Binding Path=ColumnCB, Mode=OneWay}" VerticalContentAlignment="Center" Grid.ColumnSpan="2" Grid.Column="1" Width="250" Height="40" HorizontalAlignment="Left" FontSize="20"/>
                     <Button Content="Display" FontSize="22" Grid.Column="2" Height="40" Width="170" Click="Display_Click" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,0,20,0" FontWeight="Bold"/>
                     <Button Content="Move" FontSize="22" Grid.Row="1" Height="40" Width="120" Click="MoveColumn_Click"/>
+					<Button Content="Rename" FontSize="22" Grid.Row="1" Grid.Column="1" Height="40" Width="120" Click="Rename_Click"/>
                     <Button Content="Limit" FontSize="22" Grid.Row="1" Grid.Column="2" Height="40" Width="120" Click="Limit_Click"/>
                 </Grid>
                 <Grid Grid.Row="1">
