--- a/Presentation/View/BoardMenu.xaml
+++ b/Presentation/View/BoardMenu.xaml
@@ -29,12 +29,11 @@
         <Label Content="KANBAN by AEO" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="50" Grid.ColumnSpan="5" FontFamily="Freestyle Script" />
         <Label Content="Your Boards" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="25" Grid.ColumnSpan="2" Grid.Row="2"/>
         <Label Content="New Board" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="25" Grid.ColumnSpan="2" Grid.Row="2" Grid.Column="3"/>
-        <ComboBox Name="BoardCB" ItemsSource="{Binding Path=BoardCB, Mode=OneWay}" HorizontalAlignment="Center" Width="140" Grid.Column="1" Grid.Row="3" VerticalAlignment="Center"/>
+        <ComboBox Name="BoardCB" ItemsSource="{Binding Path=BoardCB, Mode=TwoWay}" HorizontalAlignment="Center" Width="140" Grid.Column="1" Grid.Row="3" VerticalAlignment="Center"/>
         <Label Content="Choose Board:" HorizontalAlignment="Center"  FontSize="15" Grid.Row="3" VerticalAlignment="Center"/>
 		<Button Name="Display" Content="Display Board"  Height="45" Width="133" Click="Display_Click" Grid.Row="4" FontSize="14"/>
 		<Button Name="Delete" Content="Delete Board" Height="45" Width="133" Grid.Row="5" FontSize="14" Click="Delete_Click"/>
-		<Button Name="leaveBoard" Content="leave Board" Height="45" Width="132" Grid.Row="4" Grid.Column="1" FontSize="14" Click="JoinBoard_Click"/>
-		<Button Name="transferowner" Content="transfer owner ship" Height="45" Width="132" Grid.Row="5" Grid.Column="1" FontSize="14" Click="LeaveBoard_Click"/>
+		<Button Name="leaveBoard" Content="leave Board" Height="45" Width="132" Grid.Row="4" Grid.Column="1" FontSize="14" Click="LeaveBoard_Click"/>
 		<Button Name="Create" Content="Create Board" Height="45" Width="132" Click="Create_Click" Grid.Row="4" Grid.Column="3" FontSize="14"/>
         <Button Name="InProgress" Content="Get In Progress Tasks"  Height="45" Width="133" Click="InProgressTasks_Click" Grid.Row="5" Grid.Column="4" FontSize="14"/>
         <Button Name="JoinBoard" Content="Join Board" Height="45" Width="132" Grid.Row="5" Grid.Column="3" FontSize="14" Click="JoinBoard_Click"/>
