--- a/Presentation/View/BoardView.xaml
+++ b/Presentation/View/BoardView.xaml
@@ -29,7 +29,7 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <Button Content="Asign Task" FontSize="22" Grid.Row="2" Height="70" Width="140" Click="Button_Click_assigntask"/>
+				<Button Content="Limit" FontSize="22" Grid.Row="2" Height="70" Width="140" Click="Limit_Click"/>
 				<Button Content="Add Task" FontSize="22" Grid.Row="3" Height="70" Width="140" Click="Button_Click_NewTask"/>
 				<Button Content="Return" FontSize="18" Grid.Row="4" Height="40" Width="80" Click="Return_Click"/>
             </Grid>
@@ -52,9 +52,6 @@
                     <Label Content="Column:" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <ComboBox Name="ColumnCB" ItemsSource="{Binding Path=ColumnCB, Mode=OneWay}" VerticalContentAlignment="Center" Grid.ColumnSpan="2" Grid.Column="1" Width="250" Height="40" HorizontalAlignment="Left" FontSize="20"/>
                     <Button Content="Display" FontSize="22" Grid.Column="2" Height="40" Width="170" Click="Display_Click" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,0,20,0" FontWeight="Bold"/>
-                    <Button Content="Move" FontSize="22" Grid.Row="1" Height="40" Width="120" Click="MoveColumn_Click"/>
-					<Button Content="Rename" FontSize="22" Grid.Row="1" Grid.Column="1" Height="40" Width="120" Click="Rename_Click"/>
-                    <Button Content="Limit" FontSize="22" Grid.Row="1" Grid.Column="2" Height="40" Width="120" Click="Limit_Click"/>
                 </Grid>
                 <Grid Grid.Row="1">
                     <ListView ItemsSource="{Binding SelectedColumn, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="14" Margin="0,0,10,10" >
