--- a/Presentation/View/BoardView.xaml
+++ b/Presentation/View/BoardView.xaml
@@ -29,6 +29,7 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
+				<Button Content="transfer" FontSize="22" Grid.Row="1" Height="70" Width="140"/>
 				<Button Content="Limit" FontSize="22" Grid.Row="2" Height="70" Width="140" Click="Limit_Click"/>
 				<Button Content="Add Task" FontSize="22" Grid.Row="3" Height="70" Width="140" Click="Button_Click_NewTask"/>
 				<Button Content="Return" FontSize="18" Grid.Row="4" Height="40" Width="80" Click="Return_Click"/>
